net/smc: Remove validation of reserved bits in CLC Decline message (bsc#1253779).

--- a/series.conf
+++ b/series.conf
@@ -34484,6 +34484,7 @@
 	patches.suse/wifi-ath11k-fix-group-data-packet-drops-during-rekey.patch
 	patches.suse/ice-fix-NULL-access-of-tx-in_use-in-ice_ll_ts_intr.patch
 	patches.suse/i40e-Fix-potential-invalid-access-when-MAC-list-is-e.patch
+	patches.suse/net-smc-Remove-validation-of-reserved-bits-in-CLC-Decline-.patch
 	patches.suse/ax25-properly-unshare-skbs-in-ax25_kiss_rcv.patch
 	patches.suse/ppp-fix-memory-leak-in-pad_compress_skb.patch
 	patches.suse/pcmcia-Fix-a-NULL-pointer-dereference-in-__iodyn_fin.patch
