--- a/series.conf
+++ b/series.conf
@@ -6932,6 +6932,7 @@
 	patches.suse/x86-bugs-Add-AUTO-mitigations-for-mds-taa-mmio-rfds.patch
 	patches.suse/x86-bugs-Use-the-cpu_smt_possible-helper-instead-of-open-c.patch
 	patches.suse/x86-bugs-Make-spectre-user-default-depend-on-MITIGATION_SP.patch
+	patches.suse/EDAC-Add-support-for-EDAC-device-features-control.patch
 	patches.suse/EDAC-ie31200-work-around-false-positive-build-warning.patch
 	patches.suse/EDAC-skx_common-i10nm-Fix-some-missing-error-reports.patch
 	patches.suse/EDAC-ie31200-Fix-the-size-of-EDAC_MC_LAYER_CHIP_SELECT-lay.patch
