--- a/series.conf
+++ b/series.conf
@@ -6934,6 +6934,7 @@
 	patches.suse/x86-bugs-Make-spectre-user-default-depend-on-MITIGATION_SP.patch
 	patches.suse/EDAC-Add-support-for-EDAC-device-features-control.patch
 	patches.suse/EDAC-Add-scrub-control-feature.patch
+	patches.suse/EDAC-Add-a-Error-Check-Scrub-control-feature.patch
 	patches.suse/EDAC-ie31200-work-around-false-positive-build-warning.patch
 	patches.suse/EDAC-skx_common-i10nm-Fix-some-missing-error-reports.patch
 	patches.suse/EDAC-ie31200-Fix-the-size-of-EDAC_MC_LAYER_CHIP_SELECT-lay.patch
