--- a/series.conf
+++ b/series.conf
@@ -6936,6 +6936,7 @@
 	patches.suse/EDAC-Add-scrub-control-feature.patch
 	patches.suse/EDAC-Add-a-Error-Check-Scrub-control-feature.patch
 	patches.suse/EDAC-Add-a-memory-repair-control-feature.patch
+	patches.suse/EDAC-Update-memory-repair-control-interface-for-memory-spa.patch
 	patches.suse/EDAC-ie31200-work-around-false-positive-build-warning.patch
 	patches.suse/EDAC-skx_common-i10nm-Fix-some-missing-error-reports.patch
 	patches.suse/EDAC-ie31200-Fix-the-size-of-EDAC_MC_LAYER_CHIP_SELECT-lay.patch
