--- a/series.conf
+++ b/series.conf
@@ -12305,6 +12305,7 @@
 	patches.kernel.org/6.12.59-184-proc-proc_maps_open-allow-proc_mem_open-to-re.patch
 	patches.kernel.org/6.12.59-185-Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and.patch
 	patches.kernel.org/6.12.59-186-Linux-6.12.59.patch
+	patches.kernel.org/selftests-mptcp-join-endpoints-longer-timeout.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
