Revert "net/mlx5e: Update and set Xon/Xoff upon port speed set" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12361,6 +12361,7 @@
 	patches.suse/ice-fix-Rx-page-leak-on-multi-buffer-frames.patch
 	patches.suse/igc-don-t-fail-igc_probe-on-LED-setup-error.patch
 	patches.suse/tls-make-sure-to-abort-the-stream-if-headers-are-bogus.patch
+	patches.suse/Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon-port-s.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
 	patches.suse/drm-bridge-anx7625-Fix-NULL-pointer-dereference-with.patch
 	patches.suse/drm-bridge-cdns-mhdp8546-Fix-missing-mutex-unlock-on.patch
