--- a/series.conf
+++ b/series.conf
@@ -12812,6 +12812,7 @@
 	patches.suse/wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-256.patch
 	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
 	patches.suse/dpll-zl3073x-Fix-double-free-in-zl3073x_devlink_flas.patch
+	patches.suse/net-mlx5e-Don-t-query-FEC-statistics-when-FEC-is-dis.patch
 	patches.suse/Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Link-AX9U.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-MT7922.patch
