Revert "net/mlx5e: Update and set Xon/Xoff upon MTU set" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12823,6 +12823,7 @@
 	patches.suse/Bluetooth-ISO-free-rx_skb-if-not-consumed.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/Bluetooth-hci_sync-Fix-using-random-address-for-BIG-.patch
+	patches.suse/Revert-net-mlx5e-Update-and-set-Xon-Xoff-upon-MTU-se.patch
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
 	patches.suse/vhost-vringh-Fix-copy_to_iter-return-value-check.patch
 	patches.suse/net-nfc-nci-Add-parameter-validation-for-packet-data.patch
