--- a/series.conf
+++ b/series.conf
@@ -13414,6 +13414,7 @@
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
+	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
