--- a/series.conf
+++ b/series.conf
@@ -12762,6 +12762,7 @@
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/inet-ping-check-sock_net-in-ping_get_port-and-ping_l.patch
 	patches.suse/smsc911x-add-second-read-of-EEPROM-mac-when-possible.patch
+	patches.suse/net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-mac80211-Fix-6-GHz-Band-capabilities-element-ad.patch
