--- a/series.conf
+++ b/series.conf
@@ -12779,6 +12779,7 @@
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/net-ethernet-microchip-sparx5-make-it-selectable-for.patch
 	patches.suse/r8169-set-EEE-speed-down-ratio-to-1.patch
+	patches.suse/net-intel-fm10k-Fix-parameter-idx-set-but-not-used.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-mt7925u-Add-VID-PID-for-Netgear-A9000.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
