ixgbe: fix memory leak and use-after-free in ixgbe_recovery_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56360,6 +56360,7 @@
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
 	patches.suse/Bluetooth-rfcomm-fix-modem-control-handling.patch
+	patches.suse/ixgbe-fix-memory-leak-and-use-after-free-in-ixgbe_re.patch
 	patches.suse/net-usb-asix_devices-Check-return-value-of-usbnet_ge.patch
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
