--- a/series.conf
+++ b/series.conf
@@ -35024,6 +35024,7 @@
 	patches.suse/drm-i915-Fix-conversion-between-clock-ticks-and-nano.patch
 	patches.suse/drm-amd-display-Fix-NULL-deref-in-debugfs-odm_combin.patch
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
+	patches.suse/x86-CPU-AMD-Add-missing-terminator-for-zen5_rdseed_microco.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.suse/KVM-VMX-Fix-check-for-valid-GVA-on-an-EPT-violation.patch
 	patches.suse/KVM-SVM-Mark-VMCB_LBR-dirty-when-MSR_IA32_DEBUGCTLMS.patch
