x86/bugs: Report correct retbleed mitigation status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34647,6 +34647,7 @@
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
+	patches.suse/x86-bugs-Report-correct-retbleed-mitigation-status.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
