x86/vmscape: Add old Intel CPUs to affected list (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34519,6 +34519,7 @@
 	patches.suse/x86-vmscape-Enable-the-mitigation.patch
 	patches.suse/x86-bugs-Move-cpu_bugs_smt_update-down.patch
 	patches.suse/x86-vmscape-Warn-when-STIBP-is-disabled-with-SMT.patch
+	patches.suse/x86-vmscape-Add-old-Intel-CPUs-to-affected-list.patch
 	patches.suse/ocfs2-fix-recursive-semaphore-deadlock-in-fiemap-cal.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/proc-fix-type-confusion-in-pde_set_flags.patch
