--- a/series.conf
+++ b/series.conf
@@ -34648,6 +34648,7 @@
 	patches.suse/btrfs-fix-the-incorrect-max_bytes-value-for-find_loc.patch
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
+	patches.suse/x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 	patches.suse/x86-bugs-Report-correct-retbleed-mitigation-status.patch
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
