USB: serial: option: add Quectel RG255C (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13228,6 +13228,7 @@
 	patches.suse/usb-raw-gadget-do-not-limit-transfer-length.patch
 	patches.suse/usb-core-quirks-Add-Huawei-ME906S-to-wakeup-quirk.patch
 	patches.suse/USB-serial-option-add-UNISOC-UIS7720.patch
+	patches.suse/USB-serial-option-add-Quectel-RG255C.patch
 	patches.suse/serial-8250_exar-add-support-for-Advantech-2-port-car.patch
 	patches.suse/serial-sc16is7xx-remove-useless-enable-of-enhanced-f.patch
 	patches.suse/serial-8250_dw-handle-reset-control-deassert-error.patch
