kernel-binary: Only skip brp-strip when debuginfo is enabled
Fixes: 4fc8f912b4f2 ("kernel-binary: Do not change debuginfo config during build")

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -1021,9 +1021,11 @@ fi
 
 %install
 
+%if 0%{?__debug_package:1}
 # get rid of /usr/lib/rpm/brp-strip-debug
-# strip removes too much from the vmlinux ELF binary
 export NO_BRP_STRIP_DEBUG=true
+%endif
+# strip removes too much from the vmlinux ELF binary
 export STRIP_KEEP_SYMTAB='*/vmlinux*'
 
 # %kernel_module_directory/%kernelrelease-%build_flavor/source points to the source
