--- a/series.conf
+++ b/series.conf
@@ -34726,6 +34726,7 @@
 	patches.suse/ASoC-qcom-sc8280xp-explicitly-set-S16LE-format-in-sc.patch
 	patches.suse/ALSA-usb-audio-add-mono-main-switch-to-Presonus-S182.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
+	patches.suse/ASoC-stm32-sai-manage-context-in-set_sysclk-callback.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
