accel/habanalabs/gaudi2: fix BMON disable configuration (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34744,6 +34744,7 @@
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
+	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
