accel/habanalabs: support mapping cb with vmalloc-backed coherent memory (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34745,6 +34745,7 @@
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
+	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
 	patches.suse/media-lirc-Fix-error-handling-in-lirc_register.patch
