--- a/series.conf
+++ b/series.conf
@@ -34717,6 +34717,7 @@
 	patches.suse/ALSA-usb-audio-Add-validation-of-UAC2-UAC3-effect-un.patch
 	patches.suse/ALSA-lx_core-use-int-type-to-store-negative-error-co.patch
 	patches.suse/ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
+	patches.suse/ALSA-serial-generic-remove-shared-static-buffer.patch
 	patches.suse/ASoC-imx-hdmi-remove-cpu_pdev-related-code.patch
 	patches.suse/ASoC-qcom-audioreach-fix-potential-null-pointer-dere.patch
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
