ASoC: qcom: sc8280xp: explicitly set S16LE format in sc8280xp_be_hw_params_fixup() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34723,6 +34723,7 @@
 	patches.suse/ASoC-Intel-bytcht_es8316-Fix-invalid-quirk-input-map.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
+	patches.suse/ASoC-qcom-sc8280xp-explicitly-set-S16LE-format-in-sc.patch
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
