ASoC: max98090/91: fixed max98091 ALSA widget powering up/down (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34979,6 +34979,7 @@
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
+	patches.suse/ASoC-max98090-91-fixed-max98091-ALSA-widget-powering.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
