Bluetooth: SCO: Fix UAF on sco_conn_free (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34780,6 +34780,7 @@
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-btusb-Check-for-unexpected-bytes-when-defr.patch
 	patches.suse/Bluetooth-bcsp-receive-data-only-if-registered.patch
+	patches.suse/Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
