--- a/series.conf
+++ b/series.conf
@@ -34778,6 +34778,7 @@
 	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
 	patches.suse/Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Link-AX9U.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
+	patches.suse/Bluetooth-btusb-Check-for-unexpected-bytes-when-defr.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
 	patches.suse/net-usb-Remove-disruptive-netif_wake_queue-in-rtl815.patch
