ASoC: tlv320aic3x: Fix class-D initialization for tlv320aic3007 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34728,6 +34728,7 @@
 	patches.suse/ALSA-usb-audio-fix-race-condition-to-UAF-in-snd_usbm.patch
 	patches.suse/ASoC-stm32-sai-manage-context-in-set_sysclk-callback.patch
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
+	patches.suse/ASoC-tlv320aic3x-Fix-class-D-initialization-for-tlv3.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
