ALSA: usb-audio: don't log messages meant for 1810c when initializing 1824c (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35023,6 +35023,7 @@
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
+	patches.suse/ALSA-usb-audio-don-t-log-messages-meant-for-1810c-wh.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.suse/ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-occurs.patch
 	patches.suse/ASoC-fsl_sai-fix-bit-order-for-DSD-format.patch
