ASoC: meson: aiu-encoder-i2s: fix bit clock polarity (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34937,6 +34937,7 @@
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
+	patches.suse/ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polarity.patch
 	patches.suse/drm-vmwgfx-Fix-a-null-ptr-access-in-the-cursor-snoop.patch
 	patches.suse/drm-vmwgfx-Fix-Use-after-free-in-validation.patch
 	patches.suse/drm-vmwgfx-Fix-copy-paste-typo-in-validation.patch
