crypto: qat - use kcalloc() in qat_uclo_map_objs_from_mof() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34843,6 +34843,7 @@
 	patches.suse/crypto-keembay-Add-missing-check-after-sg_nents_for_.patch
 	patches.suse/hwrng-nomadik-add-ARM_AMBA-dependency.patch
 	patches.suse/crypto-hisilicon-qm-check-whether-the-input-function.patch
+	patches.suse/crypto-qat-use-kcalloc-in-qat_uclo_map_objs_from_mof.patch
 	patches.suse/crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-aspeed-Fix-dma_unmap_sg-direction.patch
 	patches.suse/crypto-hisilicon-qm-set-NULL-to-qm-debug.qm_diff_reg.patch
