--- a/series.conf
+++ b/series.conf
@@ -34732,6 +34732,7 @@
 	patches.suse/ASoC-wcd934x-fix-error-handling-in-wcd934x_codec_par.patch
 	patches.suse/ASoC-tlv320aic3x-Fix-class-D-initialization-for-tlv3.patch
 	patches.suse/drm-panel-novatek-nt35560-Fix-invalid-return-value.patch
+	patches.suse/drm-nouveau-replace-snprintf-with-scnprintf-in-nvkm_.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
