--- a/series.conf
+++ b/series.conf
@@ -35028,6 +35028,7 @@
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
+	patches.suse/crypto-aspeed-fix-double-free-caused-by-devm.patch
 	patches.suse/ALSA-usb-audio-fix-control-pipe-direction.patch
 	patches.suse/ALSA-usb-audio-don-t-log-messages-meant-for-1810c-wh.patch
 	patches.suse/ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
