--- a/series.conf
+++ b/series.conf
@@ -33232,6 +33232,7 @@
 	patches.suse/amd-amdkfd-fix-a-kfd_process-ref-leak.patch
 	patches.suse/drm-amd-display-Add-null-pointer-check-for-get_first.patch
 	patches.suse/drm-scheduler-signal-scheduled-fence-when-kill-job.patch
+	patches.suse/char-misc-restrict-the-dynamic-range-to-exclude-rese.patch
 	patches.suse/bus-mhi-ep-Update-read-pointer-only-after-buffer-is-.patch
 	patches.suse/bus-mhi-host-Fix-conflict-between-power_up-and-SYSER.patch
 	patches.suse/iio-adc-ad7606_spi-fix-reg-write-value-mask.patch
