EDAC: Initialize EDAC features sysfs attributes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10845,6 +10845,7 @@
 	patches.suse/x86-mce-Ensure-user-polling-settings-are-honored-when-rest.patch
 	patches.suse/x86-mce-amd-Add-default-names-for-MCA-banks-and-blocks.patch
 	patches.suse/x86-mce-Make-sure-CMCI-banks-are-cleared-during-shutdown-o.patch
+	patches.suse/EDAC-Initialize-EDAC-features-sysfs-attributes.patch
 	patches.suse/x86-sev-Use-TSC_FACTOR-for-Secure-TSC-frequency-calcu.patch
 	patches.suse/perf-core-Fix-the-WARN_ON_ONCE-is-out-of-lock-protected-region.patch
 	patches.suse/perf-Revert-to-requiring-CAP_SYS_ADMIN-for-uprobes.patch
