--- a/series.conf
+++ b/series.conf
@@ -8296,6 +8296,7 @@
 	patches.suse/thermal-drivers-mediatek-lvts-Disable-Stage-3-therma.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Disable-low-offset-IRQ.patch
 	patches.suse/thermal-drivers-mediatek-lvts-Start-sensor-interrupt.patch
+	patches.suse/Documentation-EDAC-Fix-warning-document-isn-t-included-in-.patch
 	patches.suse/virtio-break-and-reset-virtio-devices-on-device_shut.patch
 	patches.suse/tools-virtio-linux-module.h-add-MODULE_DESCRIPTION-d.patch
 	patches.suse/vhost-scsi-Fix-handling-of-multiple-calls-to-vhost_s.patch
