--- a/series.conf
+++ b/series.conf
@@ -12648,6 +12648,7 @@
 	patches.suse/btrfs-use-smp_mb__after_atomic-when-forcing-COW-in-c.patch
 	patches.suse/cpuset-fix-failure-to-enable-isolated-partition-when-conta.patch
 	patches.suse/cpuset-Use-new-excpus-for-nocpu-error-check-when-enabling-.patch
+	patches.suse/EDAC-amd64-Add-support-for-AMD-family-1Ah-based-newer-mode.patch
 	patches.suse/x86-bugs-Fix-reporting-of-LFENCE-retpoline.patch
 	patches.suse/x86-bugs-Report-correct-retbleed-mitigation-status.patch
 	patches.suse/x86-resctrl-Refactor-resctrl_arch_rmid_read.patch
