--- a/series.conf
+++ b/series.conf
@@ -34679,6 +34679,7 @@
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/cpuidle-qcom-spm-fix-device-and-OF-node-leaks-at-probe.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
+	patches.suse/tools-power-x86_energy_perf_policy-Fix-incorrect-fopen-mode-usage.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
