tools/power x86_energy_perf_policy: Enhance HWP enable (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34680,6 +34680,7 @@
 	patches.suse/cpuidle-qcom-spm-fix-device-and-OF-node-leaks-at-probe.patch
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Fix-incorrect-fopen-mode-usage.patch
+	patches.suse/tools-power-x86_energy_perf_policy-Enhance-HWP-enable.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
