--- a/series.conf
+++ b/series.conf
@@ -34681,6 +34681,7 @@
 	patches.suse/PM-sleep-core-Clear-power.must_resume-in-noirq-suspe.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Fix-incorrect-fopen-mode-usage.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Enhance-HWP-enable.patch
+	patches.suse/tools-power-x86_energy_perf_policy-Prefer-driver-HWP-limits.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
