tools/cpupower: fix error return value in cpupower_write_sysfs() (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34682,6 +34682,7 @@
 	patches.suse/tools-power-x86_energy_perf_policy-Fix-incorrect-fopen-mode-usage.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Enhance-HWP-enable.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Prefer-driver-HWP-limits.patch
+	patches.suse/tools-cpupower-fix-error-return-value-in-cpupower_write_sysfs.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
