--- a/series.conf
+++ b/series.conf
@@ -34683,6 +34683,7 @@
 	patches.suse/tools-power-x86_energy_perf_policy-Enhance-HWP-enable.patch
 	patches.suse/tools-power-x86_energy_perf_policy-Prefer-driver-HWP-limits.patch
 	patches.suse/tools-cpupower-fix-error-return-value-in-cpupower_write_sysfs.patch
+	patches.suse/tools-cpupower-Fix-incorrect-size-in-cpuidle_state_disable.patch
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
