--- a/series.conf
+++ b/series.conf
@@ -34687,6 +34687,7 @@
 	patches.suse/ACPI-debug-fix-signedness-issues-in-read-write-helpe.patch
 	patches.suse/ACPICA-Allow-to-skip-Global-Lock-initialization.patch
 	patches.suse/ACPICA-dispatcher-Use-acpi_ds_clear_operands-in-acpi_ds_call_control_method.patch
+	patches.suse/ACPICA-Update-dsmethod.c-to-get-rid-of-unused-variable-warning.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
