ACPI: scan: Add Intel CVS ACPI HIDs to acpi_ignore_dep_ids (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34689,6 +34689,7 @@
 	patches.suse/ACPICA-dispatcher-Use-acpi_ds_clear_operands-in-acpi_ds_call_control_method.patch
 	patches.suse/ACPICA-Update-dsmethod.c-to-get-rid-of-unused-variable-warning.patch
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
+	patches.suse/ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_ignore_dep_ids.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
 	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
