--- a/series.conf
+++ b/series.conf
@@ -34696,6 +34696,7 @@
 	patches.suse/ACPI-property-Add-code-comments-explaining-what-is-g.patch
 	patches.suse/ACPI-property-Do-not-pass-NULL-handles-to-acpi_attach_data.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
+	patches.suse/ACPI-PRM-Skip-handlers-with-NULL-handler_address-or-NULL-VA.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-apple-t8103-j457-Fix-PCIe-ethernet-iommu-map.patch
 	patches.suse/arm64-dts-apple-Add-ethernet0-alias-for-J375-template.patch
