--- a/series.conf
+++ b/series.conf
@@ -34889,6 +34889,7 @@
 	patches.suse/clk-at91-peripheral-fix-return-value.patch
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-in-policy.patch
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
+	patches.suse/ACPI-property-Return-present-device-nodes-only-on-fwnode-interface.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
