--- a/series.conf
+++ b/series.conf
@@ -8419,6 +8419,7 @@
 	patches.suse/i40e-Replace-one-element-array-with-flex-array-membe-fbfa49f9.patch
 	patches.suse/i40e-Replace-one-element-array-with-flex-array-membe-ff1a724c.patch
 	patches.suse/i40e-Replace-one-element-array-with-flex-array-membe-4bb28b27.patch
+	patches.suse/net-tcp-send-zero-window-ACK-when-no-memory.patch
 	patches.suse/net-tcp-fix-unexcepted-socket-die-when-snd_wnd-is-0.patch
 	patches.suse/netlink-convert-nlk-flags-to-atomic-flags.patch
 	patches.suse/tg3-Use-pci_dev_id-to-simplify-the-code.patch
