--- a/series.conf
+++ b/series.conf
@@ -34737,6 +34737,7 @@
 	patches.suse/drm-tidss-Use-the-crtc_-timings-when-programming-the.patch
 	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.suse/drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MODE_VIDE.patch
+	patches.suse/drm-tidss-Set-crtc-modesetting-parameters-with-adjus.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
