drm/amdkfd: Handle lack of READ permissions in SVM mapping (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34749,6 +34749,7 @@
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amdkfd-return-ENOTTY-for-unsupported-IOCTLs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
+	patches.suse/drm-amdkfd-Handle-lack-of-READ-permissions-in-SVM-ma.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
