--- a/series.conf
+++ b/series.conf
@@ -34773,6 +34773,7 @@
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
+	patches.suse/drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
