--- a/series.conf
+++ b/series.conf
@@ -34763,6 +34763,7 @@
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
 	patches.suse/drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.suse/drm-amdgpu-add-support-for-cyan-skillfish-gpu_info.patch
+	patches.suse/drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
