--- a/series.conf
+++ b/series.conf
@@ -34899,6 +34899,7 @@
 	patches.suse/iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_CLKDIV_.patch
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
+	patches.suse/extcon-adc-jack-Fix-wakeup-source-leaks-on-device-un.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
