drm/amd/pm: Disable MCLK switching on SI at high pixel clocks (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35009,6 +35009,7 @@
 	patches.suse/btrfs-fix-clearing-of-BTRFS_FS_RELOC_RUNNING-if-relo.patch
 	patches.suse/btrfs-do-not-assert-we-found-block-group-item-when-c.patch
 	patches.suse/drm-i915-guc-Skip-communication-warning-on-reset-in-.patch
+	patches.suse/drm-amd-pm-Disable-MCLK-switching-on-SI-at-high-pixe.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
 	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
