--- a/series.conf
+++ b/series.conf
@@ -34751,6 +34751,7 @@
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-amdkfd-Handle-lack-of-READ-permissions-in-SVM-ma.patch
 	patches.suse/drm-amdkfd-fix-vram-allocation-failure-for-a-special.patch
+	patches.suse/drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preemption.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
