--- a/series.conf
+++ b/series.conf
@@ -34753,6 +34753,7 @@
 	patches.suse/drm-amdkfd-fix-vram-allocation-failure-for-a-special.patch
 	patches.suse/drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preemption.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
+	patches.suse/drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-objects.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
 	patches.suse/drm-amd-pm-Disable-ULV-even-if-unsupported-v3.patch
 	patches.suse/drm-amd-pm-Fix-si_upload_smc_data-v3.patch
