--- a/series.conf
+++ b/series.conf
@@ -35063,6 +35063,7 @@
 	patches.suse/net-phy-dp83869-fix-STRAP_OPMODE-bitmask.patch
 	patches.suse/fbdev-valkyriefb-Fix-reference-count-leak-in-valkyri.patch
 	patches.suse/fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_NR_DMA.patch
+	patches.suse/fbdev-bitblit-bound-check-glyph-index-in-bit_putcs.patch
 	patches.suse/fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 	patches.suse/ACPI-button-Call-input_free_device-on-failing-input-.patch
 	patches.suse/ACPI-video-Fix-use-after-free-in-acpi_video_switch_b.patch
