drm/amd/pm: Use cached metrics data on aldebaran (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34743,6 +34743,7 @@
 	patches.suse/drm-amd-display-Increase-AUX-Intra-Hop-Done-Max-Wait.patch
 	patches.suse/drm-amd-display-add-more-cyan-skillfish-devices.patch
 	patches.suse/drm-amd-display-update-dpp-disp-clock-from-smu-clock.patch
+	patches.suse/drm-amd-pm-Use-cached-metrics-data-on-aldebaran.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
