drm/amd: Avoid evicting resources at S5 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34770,6 +34770,7 @@
 	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
+	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
