drm/amdgpu: Use memdup_array_user in amdgpu_cs_wait_fences_ioctl (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34769,6 +34769,7 @@
 	patches.suse/drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-rate.patch
 	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
+	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
