--- a/series.conf
+++ b/series.conf
@@ -34735,6 +34735,7 @@
 	patches.suse/drm-nouveau-replace-snprintf-with-scnprintf-in-nvkm_.patch
 	patches.suse/drm-bridge-it6505-select-REGMAP_I2C.patch
 	patches.suse/drm-tidss-Use-the-crtc_-timings-when-programming-the.patch
+	patches.suse/drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
