drm/amdkfd: return -ENOTTY for unsupported IOCTLs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34747,6 +34747,7 @@
 	patches.suse/drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
 	patches.suse/drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-poweroff.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
+	patches.suse/drm-amdkfd-return-ENOTTY-for-unsupported-IOCTLs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.suse/drm-amdgpu-Power-up-UVD-3-for-FW-validation-v2.patch
