drm/amd: add more cyan skillfish PCI ids (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34761,6 +34761,7 @@
 	patches.suse/drm-amd-pm-Treat-zero-vblank-time-as-too-short-in-si.patch
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-with-non-DC-at-120.patch
 	patches.suse/drm-amd-pm-Disable-SCLK-switching-on-Oland-with-high.patch
+	patches.suse/drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
