--- a/series.conf
+++ b/series.conf
@@ -34745,6 +34745,7 @@
 	patches.suse/drm-amd-display-update-dpp-disp-clock-from-smu-clock.patch
 	patches.suse/drm-amd-pm-Use-cached-metrics-data-on-aldebaran.patch
 	patches.suse/drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
+	patches.suse/drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-poweroff.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
