--- a/series.conf
+++ b/series.conf
@@ -35012,6 +35012,7 @@
 	patches.suse/drm-amd-pm-Disable-MCLK-switching-on-SI-at-high-pixe.patch
 	patches.suse/drm-amdgpu-use-atomic-functions-with-memory-barriers.patch
 	patches.suse/drm-amd-powerplay-Fix-CIK-shutdown-temperature.patch
+	patches.suse/drm-amdgpu-Fix-NULL-pointer-dereference-in-VRAM-logi.patch
 	patches.suse/drm-bridge-lt9211-Drop-check-for-last-nibble-of-vers.patch
 	patches.suse/drm-rockchip-vop2-use-correct-destination-rectangle-.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
