--- a/series.conf
+++ b/series.conf
@@ -34778,6 +34778,7 @@
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
 	patches.suse/accel-habanalabs-gaudi2-read-preboot-status-after-re.patch
+	patches.suse/drm-amd-display-Add-AVI-infoframe-copy-in-copy_strea.patch
 	patches.suse/drm-amdgpu-remove-the-redeclaration-of-variable-i.patch
 	patches.suse/amd-amdkfd-resolve-a-race-in-amdgpu_amdkfd_device_fi.patch
 	patches.suse/media-zoran-Remove-zoran_fh-structure.patch
