--- a/series.conf
+++ b/series.conf
@@ -34887,6 +34887,7 @@
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
+	patches.suse/char-misc-Make-misc_register-reentry-for-miscdevice-.patch
 	patches.suse/uio-uio_pdrv_genirq-Remove-MODULE_DEVICE_TABLE.patch
 	patches.suse/msft-hv-3336-uio_hv_generic-Let-userspace-take-care-of-interrupt-.patch
 	patches.suse/misc-genwqe-Fix-incorrect-cmd-field-being-reported-i.patch
