--- a/series.conf
+++ b/series.conf
@@ -34973,6 +34973,7 @@
 	patches.suse/tpm_tis-Fix-incorrect-arguments-in-tpm_tis_probe_irq.patch
 	patches.suse/crypto-essiv-Check-ssize-for-decryption-and-in-place.patch
 	patches.suse/gpio-wcd934x-mark-the-GPIO-controller-as-sleeping.patch
+	patches.suse/fbdev-Add-bounds-checking-in-bit_putcs-to-fix-vmallo.patch
 	patches.suse/fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.suse/ASoC-SOF-ipc3-topology-Fix-multi-core-and-static-pip.patch
 	patches.suse/ASoC-SOF-ipc4-topology-Correct-the-minimum-host-DMA-.patch
