drm/msm: make sure to not queue up recovery more than once (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34767,6 +34767,7 @@
 	patches.suse/drm-amdkfd-Fix-error-code-sign-for-EINVAL-in-svm_ioc.patch
 	patches.suse/drm-msm-dsi-phy-Toggle-back-buffer-resync-after-prep.patch
 	patches.suse/drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-rate.patch
+	patches.suse/drm-msm-make-sure-to-not-queue-up-recovery-more-than.patch
 	patches.suse/drm-msm-dpu-fix-incorrect-type-for-ret.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
