drm/amd/display: ensure committing streams is seamless (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34739,6 +34739,7 @@
 	patches.suse/drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MODE_VIDE.patch
 	patches.suse/drm-tidss-Set-crtc-modesetting-parameters-with-adjus.patch
 	patches.suse/drm-bridge-display-connector-don-t-set-OP_DETECT-for.patch
+	patches.suse/drm-amd-display-ensure-committing-streams-is-seamles.patch
 	patches.suse/drm-radeon-r600_cs-clean-up-of-dead-code-in-r600_cs.patch
 	patches.suse/drm-amd-display-Remove-redundant-semicolons.patch
 	patches.suse/drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
