drm/amd/display: Disable VRR on DCE 6 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34772,6 +34772,7 @@
 	patches.suse/drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_wait_f.patch
 	patches.suse/drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.suse/drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
+	patches.suse/drm-amd-display-Disable-VRR-on-DCE-6.patch
 	patches.suse/accel-habanalabs-return-ENOMEM-if-less-than-requeste.patch
 	patches.suse/accel-habanalabs-gaudi2-fix-BMON-disable-configurati.patch
 	patches.suse/accel-habanalabs-support-mapping-cb-with-vmalloc-bac.patch
