--- a/series.conf
+++ b/series.conf
@@ -34900,6 +34900,7 @@
 	patches.suse/iio-dac-ad5360-use-int-type-to-store-negative-error-.patch
 	patches.suse/iio-dac-ad5421-use-int-type-to-store-negative-error-.patch
 	patches.suse/extcon-adc-jack-Fix-wakeup-source-leaks-on-device-un.patch
+	patches.suse/extcon-adc-jack-Cleanup-wakeup-source-only-if-it-was.patch
 	patches.suse/iio-consumers-Fix-offset-handling-in-iio_convert_raw.patch
 	patches.suse/iio-imu-inv_icm42600-Drop-redundant-pm_runtime-reini.patch
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
