--- a/series.conf
+++ b/series.conf
@@ -34770,6 +34770,7 @@
 	patches.suse/ext4-avoid-potential-buffer-over-read-in-parse_apply.patch
 	patches.suse/ext4-fix-checks-for-orphan-inodes.patch
 	patches.suse/jfs-Verify-inode-mode-when-loading-from-disk.patch
+	patches.suse/jfs-fix-uninitialized-waitqueue-in-transaction-manager.patch
 	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
 	patches.suse/exfat-limit-log-print-for-IO-error.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
