hwmon: (k10temp) Add device ID for Strix Halo (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34656,6 +34656,7 @@
 	patches.suse/bpf-Explicitly-check-accesses-to-bpf_sock_addr.patch
 	patches.suse/driver-core-PM-Set-power.no_callbacks-along-with-pow.patch
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
+	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
