hwmon: (dell-smm) Add support for Dell OptiPlex 7040 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34660,6 +34660,7 @@
 	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
 	patches.suse/hwmon-sy7636a-add-alias.patch
 	patches.suse/hwmon-asus-ec-sensors-increase-timeout-for-locking-A.patch
+	patches.suse/hwmon-dell-smm-Add-support-for-Dell-OptiPlex-7040.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
