--- a/series.conf
+++ b/series.conf
@@ -34658,6 +34658,7 @@
 	patches.suse/hwmon-k10temp-Add-thermal-support-for-AMD-Family-1Ah.patch
 	patches.suse/hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.suse/hwmon-sbtsi_temp-AMD-CPU-extended-temperature-range-.patch
+	patches.suse/hwmon-sy7636a-add-alias.patch
 	patches.suse/hwmon-mlxreg-fan-Separate-methods-of-fan-setting-com.patch
 	patches.suse/pwm-berlin-Fix-wrong-register-in-suspend-resume.patch
 	patches.suse/pwm-tiehrpwm-Make-code-comment-in-.free-more-useful.patch
