--- a/series.conf
+++ b/series.conf
@@ -34915,6 +34915,7 @@
 	patches.suse/bus-mhi-host-Do-not-use-uninitialized-dev-pointer-in.patch
 	patches.suse/coresight-trbe-Return-NULL-pointer-for-allocation-failures.patch
 	patches.suse/coresight-Fix-incorrect-handling-for-return-value-of.patch
+	patches.suse/ima-don-t-clear-IMA_DIGSIG-flag-when-setting-or-remo.patch
 	patches.suse/phy-cdns-dphy-Store-hs_clk_rate-and-return-it.patch
 	patches.suse/phy-rockchip-naneng-combphy-Enable-U3-OTG-port-for-R.patch
 	patches.suse/phy-cadence-cdns-dphy-Fix-PLL-lock-and-O_CMN_READY-p.patch
