--- a/series.conf
+++ b/series.conf
@@ -34774,6 +34774,7 @@
 	patches.suse/orangefs-Remove-unused-type-in-macro-fill_default_sys_attrs.patch
 	patches.suse/exfat-limit-log-print-for-IO-error.patch
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
+	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supported.patch
