--- a/series.conf
+++ b/series.conf
@@ -34776,6 +34776,7 @@
 	patches.suse/smb-client-fix-crypto-buffers-in-non-linear-memory.patch
 	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
+	patches.suse/NFSv4.1-fix-mount-hang-after-CREATE_SESSION-failure.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supported.patch
 	patches.suse/iommu-vt-d-Disallow-dirty-tracking-if-incoherent-pag.patch
