memstick: Add timeout to prevent indefinite waiting (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34674,6 +34674,7 @@
 	patches.suse/spi-cadence-quadspi-Flush-posted-register-writes-bef-1ad5576.patch
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
+	patches.suse/memstick-Add-timeout-to-prevent-indefinite-waiting.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
