--- a/series.conf
+++ b/series.conf
@@ -34823,6 +34823,7 @@
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
 	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/net-nfc-nci-Increase-NCI_DATA_TIMEOUT-to-3000-ms.patch
+	patches.suse/net-phy-marvell-Fix-88e1510-downshift-counter-errata.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
