media: redrat3: use int type to store negative error codes (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34814,6 +34814,7 @@
 	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
 	patches.suse/media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
+	patches.suse/media-redrat3-use-int-type-to-store-negative-error-c.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
 	patches.suse/media-i2c-tc358743-Fix-use-after-free-bugs-caused-by.patch
