media: ov08x40: Fix the horizontal flip control (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34812,6 +34812,7 @@
 	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
+	patches.suse/media-ov08x40-Fix-the-horizontal-flip-control.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
