media: adv7180: Only validate format in querystd (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34809,6 +34809,7 @@
 	patches.suse/media-nxp-imx8-isi-Drop-unused-argument-to-mxc_isi_c.patch
 	patches.suse/media-adv7180-Add-missing-lock-in-suspend-callback.patch
 	patches.suse/media-adv7180-Do-not-write-format-to-device-in-set_f.patch
+	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
