--- a/series.conf
+++ b/series.conf
@@ -34675,6 +34675,7 @@
 	patches.suse/mmc-core-SPI-mode-remove-cmd7.patch
 	patches.suse/mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.suse/memstick-Add-timeout-to-prevent-indefinite-waiting.patch
+	patches.suse/mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for-SD-ca.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
