--- a/series.conf
+++ b/series.conf
@@ -34821,6 +34821,7 @@
 	patches.suse/media-tuner-xc5000-Fix-use-after-free-in-xc5000_rele.patch
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/sctp-Fix-MAC-comparison-to-be-constant-time.patch
+	patches.suse/net-phy-fixed_phy-let-fixed_phy_unregister-free-the-.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
