--- a/series.conf
+++ b/series.conf
@@ -34963,6 +34963,7 @@
 	patches.suse/PCI-j721e-Fix-incorrect-error-message-in-probe.patch
 	patches.suse/PCI-keystone-Use-devm_request_irq-to-free-ks-pcie-er.patch
 	patches.suse/PCI-rcar-host-Drop-PMSR-spinlock.patch
+	patches.suse/PCI-rcar-host-Convert-struct-rcar_msi-mask_lock-into.patch
 	patches.suse/PCI-tegra-Fix-devm_kcalloc-argument-order-for-port-p.patch
 	patches.suse/PCI-tegra194-Fix-duplicate-PLL-disable-in-pex_ep_eve.patch
 	patches.suse/PCI-tegra-Convert-struct-tegra_msi-mask_lock-into-ra.patch
