mfd: stmpe-i2c: Add missing MODULE_LICENSE (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34677,6 +34677,7 @@
 	patches.suse/memstick-Add-timeout-to-prevent-indefinite-waiting.patch
 	patches.suse/mmc-sdhci-msm-Enable-tuning-for-SDR50-mode-for-SD-ca.patch
 	patches.suse/mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
+	patches.suse/mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 	patches.suse/mfd-intel_soc_pmic_chtdc_ti-Set-use_single_read-regm.patch
 	patches.suse/mfd-rz-mtu3-Fix-MTU5-NFCR-register-offset.patch
 	patches.suse/power-supply-cw2015-Fix-a-alignment-coding-style-iss.patch
