PCI/PM: Skip resuming to D0 if device is disconnected (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34951,6 +34951,7 @@
 	patches.suse/PCI-AER-Support-errors-introduced-by-PCIe-r6.0.patch
 	patches.suse/PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
 	patches.suse/PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm_kfree.patch
+	patches.suse/PCI-PM-Skip-resuming-to-D0-if-device-is-disconnected.patch
 	patches.suse/PCI-sysfs-Ensure-devices-are-powered-for-config-read.patch
 	patches.suse/PCI-IOV-Add-PCI-rescan-remove-locking-when-enabling-.patch
 	patches.suse/PCI-endpoint-pci-epf-test-Add-NULL-check-for-DMA-cha.patch
