--- a/series.conf
+++ b/series.conf
@@ -34811,6 +34811,7 @@
 	patches.suse/media-adv7180-Do-not-write-format-to-device-in-set_f.patch
 	patches.suse/media-adv7180-Only-validate-format-in-querystd.patch
 	patches.suse/media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
+	patches.suse/media-i2c-og01a1b-Specify-monochrome-media-bus-forma.patch
 	patches.suse/media-rc-fix-races-with-imon_disconnect.patch
 	patches.suse/media-uvcvideo-Mark-invalid-entities-with-id-UVC_INV.patch
 	patches.suse/media-b2c2-Fix-use-after-free-causing-by-irq_check_w.patch
