--- a/series.conf
+++ b/series.conf
@@ -34777,6 +34777,7 @@
 	patches.suse/NFSv4-handle-ERR_GRACE-on-delegation-recalls.patch
 	patches.suse/NFSv4.1-fix-backchannel-max_resp_sz-verification-check.patch
 	patches.suse/NFSv4.1-fix-mount-hang-after-CREATE_SESSION-failure.patch
+	patches.suse/nfs4_setup_readdir-insufficient-locking-for-d_parent-d_inode-dereferencing.patch
 	patches.suse/docs-admin-guide-update-to-current-minimum-pipe-size.patch
 	patches.suse/iommu-vt-d-PRS-isn-t-usable-if-PDS-isn-t-supported.patch
 	patches.suse/iommu-vt-d-Disallow-dirty-tracking-if-incoherent-pag.patch
