--- a/series.conf
+++ b/series.conf
@@ -34956,6 +34956,7 @@
 	patches.suse/nvme-multipath-Skip-nr_active-increments-in-RETRY-di.patch
 	patches.suse/nvme-tcp-handle-tls-partially-sent-records-in-write_.patch
 	patches.suse/NFS-check-if-suid-sgid-was-cleared-after-a-write-as-needed.patch
+	patches.suse/NFS4-Fix-state-renewals-missing-after-boot.patch
 	patches.suse/HID-hid-input-only-ignore-0-battery-events-for-digit.patch
 	patches.suse/HID-multitouch-fix-name-of-Stylus-input-devices.patch
 	patches.suse/msft-hv-3361-scsi-storvsc-Prefer-returning-channel-with-the-same-.patch
