tools: lib: thermal: use pkg-config to locate libnl3 (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35003,6 +35003,7 @@
 	patches.suse/cpufreq-tegra186-Set-target-frequency-for-all-cpus-in-policy.patch
 	patches.suse/ACPI-battery-Add-synchronization-between-interface-u.patch
 	patches.suse/ACPI-property-Return-present-device-nodes-only-on-fwnode-interface.patch
+	patches.suse/tools-lib-thermal-use-pkg-config-to-locate-libnl3.patch
 	patches.suse/staging-axis-fifo-fix-maximum-TX-packet-length-check.patch
 	patches.suse/staging-axis-fifo-fix-TX-handling-on-copy_from_user-.patch
 	patches.suse/staging-axis-fifo-flush-RX-FIFO-on-read-errors.patch
