usb: mon: Increase BUFF_MAX to 64 MiB to support multi-MB URBs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34933,6 +34933,7 @@
 	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/usb-cdns3-gadget-Use-after-free-during-failed-initia.patch
 	patches.suse/usb-xhci-plat-Facilitate-using-autosuspend-for-xhci-.patch
+	patches.suse/usb-mon-Increase-BUFF_MAX-to-64-MiB-to-support-multi.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
