usb: gadget: f_hid: Fix zero length packet transfer (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34930,6 +34930,7 @@
 	patches.suse/usb-misc-qcom_eud-Access-EUD_MODE_MANAGER2-through-s.patch
 	patches.suse/usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethernet.patch
 	patches.suse/usb-phy-twl6030-Fix-incorrect-type-for-ret.patch
+	patches.suse/usb-gadget-f_hid-Fix-zero-length-packet-transfer.patch
 	patches.suse/thunderbolt-Compare-HMAC-values-in-constant-time.patch
 	patches.suse/thunderbolt-Use-is_pciehp-instead-of-is_hotplug_brid.patch
 	patches.suse/USB-serial-option-add-SIMCom-8230C-compositions.patch
