wifi: mt76: mt7921: Add 160MHz beamformee capability for mt7922 device (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34839,6 +34839,7 @@
 	patches.suse/net-phy-clear-link-parameters-on-admin-link-down.patch
 	patches.suse/ipvs-Defer-ip_vs_ftp-unregister-during-netns-cleanup.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
+	patches.suse/wifi-mt76-mt7921-Add-160MHz-beamformee-capability-fo.patch
 	patches.suse/wifi-mt76-mt7921u-Add-VID-PID-for-Netgear-A7500.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
