drm/mediatek: Add pm_runtime support for GCE power control (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56435,6 +56435,7 @@
 	patches.suse/drm-amd-Fix-suspend-failure-with-secure-display-TA.patch
 	patches.suse/drm-amd-display-Enable-mst-when-it-s-detected-but-ye.patch
 	patches.suse/drm-mediatek-Disable-AFBC-support-on-Mediatek-DRM-dr.patch
+	patches.suse/drm-mediatek-Add-pm_runtime-support-for-GCE-power-co.patch
 	patches.suse/drm-xe-guc-Synchronize-Dead-CT-worker-with-unbind.patch
 	patches.suse/x86-CPU-AMD-Add-missing-terminator-for-zen5_rdseed_m.patch
 	patches.suse/rtc-rx8025-fix-incorrect-register-reference.patch
