wifi: ath11k: Add quirk entries for Thinkpad T14s Gen3 AMD (bsc#1254181).

--- a/series.conf
+++ b/series.conf
@@ -56852,6 +56852,7 @@
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
 	patches.suse/iwlwifi-correct-modinf-firmware-ucode.patch
+	patches.suse/wifi-ath11k-Add-quirk-entries-for-Thinkpad-T14s-Gen3.patch
 
 	########################################################
 	# USB
