drm/amdkfd: relax checks for over allocation of save area (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13411,6 +13411,7 @@
 	patches.suse/mmc-dw_mmc-rockchip-Fix-wrong-internal-phase-calcula.patch
 	patches.suse/drm-amdgpu-disable-peer-to-peer-access-for-DCC-enabl.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
+	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
 	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
