wifi: cfg80211: add an hrtimer based delayed work item (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13332,6 +13332,7 @@
 	patches.suse/media-uvcvideo-Use-heuristic-to-find-stream-entity.patch
 	patches.suse/media-videobuf2-forbid-remove_bufs-when-legacy-filei.patch
 	patches.suse/Revert-wifi-ath10k-avoid-unnecessary-wait-for-servic.patch
+	patches.suse/wifi-cfg80211-add-an-hrtimer-based-delayed-work-item.patch
 	patches.suse/wifi-zd1211rw-fix-potential-memory-leak-in-__zd_usb_.patch
 	patches.suse/Bluetooth-hci_event-validate-skb-length-for-unknown-.patch
 	patches.suse/Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse_firmw.patch
