- x86/amd_nb: Add new PCI IDs for AMD family 0x1a (stable-fixes). - Refresh   patches.suse/x86-amd_nb-Add-new-PCI-IDs-for-AMD-family-1Ah-model-60h.patch.

--- a/series.conf
+++ b/series.conf
@@ -24816,6 +24816,7 @@
 	patches.suse/drm-meson-dw-hdmi-add-bandgap-setting-for-g12.patch
 	patches.suse/drm-connector-Add-n-to-message-about-demoting-connec.patch
 	patches.suse/Revert-drm-nouveau-firmware-Fix-SG_DEBUG-error-with-.patch
+	patches.suse/x86-amd_nb-Add-new-PCI-IDs-for-AMD-family-0x1a.patch
 	patches.suse/EDAC-synopsys-Fix-ECC-status-and-IRQ-control-race-co.patch
 	patches.suse/KVM-s390-Check-kvm-pointer-when-testing-KVM_CAP_S390_HPAGE_1M.patch
 	patches.suse/selftests-pidfd-Fix-config-for-pidfd_setns_test.patch
