selftests/run_kselftest.sh: Add `--skip` argument option (bsc#1254221).

--- a/series.conf
+++ b/series.conf
@@ -56498,6 +56498,9 @@
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
 
+	# out-of-tree patches
+	patches.suse/selftests-run_kselftest.sh-Add-skip-argument-option.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
