tools/power turbostat: Document GNR UncMHz domain convention (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -8511,6 +8511,7 @@
 	patches.suse/tools-power-turbostat-Add-idle-governor-statistics-reporting.patch
 	patches.suse/tools-power-turbostat-Increase-CPU_SUBSET_MAXCPUS-to-8192.patch
 	patches.suse/tools-power-turbostat-report-CoreThr-per-measurement-interval.patch
+	patches.suse/tools-power-turbostat-Document-GNR-UncMHz-domain-convention.patch
 	patches.suse/tools-power-turbostat-Restore-GFX-sysfs-fflush-call.patch
 	patches.suse/cgroup-cpuset-Fix-incorrect-isolated_cpus-update-in-update_parent_effective_cpumask.patch
 	patches.suse/cgroup-cpuset-Fix-error-handling-in-remote_partition_disable.patch
