tools/power turbostat: Fix RAPL_GFX_ALL typo (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -10449,6 +10449,7 @@
 	patches.suse/tools-power-turbostat.8-fix-typo-idle_pct-should-be-pct_idle.patch
 	patches.suse/tools-power-turbostat.8-pm_domain-wording-fix.patch
 	patches.suse/tools-power-turbostat-Add-Android-support-for-MSR-device-handling.patch
+	patches.suse/tools-power-turbostat-Fix-RAPL_GFX_ALL-typo.patch
 	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
