tools/power turbostat: Remove add_cstate_perf_counter_() (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -10454,6 +10454,7 @@
 	patches.suse/tools-power-turbostat-Always-check-rapl_joules-flag.patch
 	patches.suse/tools-power-turbostat-Quit-early-for-unsupported-RAPL-counters.patch
 	patches.suse/tools-power-turbostat-Remove-add_rapl_perf_counter_.patch
+	patches.suse/tools-power-turbostat-Remove-add_cstate_perf_counter_.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
