tools/power turbostat.8: Document Totl%C0, Any%C0, GFX%C0, CPUGFX% columns (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -12082,6 +12082,7 @@
 	patches.suse/tools-power-turbostat-Fix-build-with-musl.patch
 	patches.suse/tools-power-turbostat-Handle-cap_get_proc-ENOSYS.patch
 	patches.suse/tools-power-turbostat-Fix-bogus-SysWatt-for-forked-p.patch
+	patches.suse/tools-power-turbostat.8-Document-Totl-C0-Any-C0-GFX-C0-CPUGFX-columns.patch
 	patches.suse/tools-power-turbostat-Handle-non-root-legacy-uncore-.patch
 	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
 	patches.suse/x86-sev-Evict-cache-lines-during-SNP-memory-validatio.patch
