tools/power turbostat: delete GET_PKG() (jsc#PED-14189).

--- a/series.conf
+++ b/series.conf
@@ -12085,6 +12085,7 @@
 	patches.suse/tools-power-turbostat.8-Document-Totl-C0-Any-C0-GFX-C0-CPUGFX-columns.patch
 	patches.suse/tools-power-turbostat-Support-more-than-64-built-in-counters.patch
 	patches.suse/tools-power-turbostat-probe-and-display-L3-cache-topology.patch
+	patches.suse/tools-power-turbostat-delete-GET_PKG.patch
 	patches.suse/tools-power-turbostat-Handle-non-root-legacy-uncore-.patch
 	patches.suse/sunrpc-fix-handling-of-server-side-tls-alerts.patch
 	patches.suse/x86-sev-Evict-cache-lines-during-SNP-memory-validatio.patch
